适配窗体大小

--- a/src/ThingsGateway.Admin.Blazor/Shared/Login.razor
+++ b/src/ThingsGateway.Admin.Blazor/Shared/Login.razor
@@ -16,7 +16,7 @@
 else
 {
     <MRow NoGutters Style="height:100%">
-         <MCol Md=7 Sm=12>
+         <MCol Md=7 Cols=12>
              <MSheet Elevation=1 Style="width:100%; height:100%;" Class="d-flex align-start flex-column mb-6">
                  <div class="d-flex align-center ml-12 mt-12">
                      <MAvatar Size="40" Color="teal">
@@ -34,8 +34,8 @@ else
 
         </MCol>
 
-        <MCol Md=5 Sm=12 Align="AlignTypes.Center">
-            <MRow Md=6 Sm=12 Justify="JustifyTypes.Center" Align="AlignTypes.Center">
+        <MCol Md=5 Cols=12 Align="AlignTypes.Center">
+            <MRow Md=6 Cols=12 Justify="JustifyTypes.Center" Align="AlignTypes.Center">
                 <MCard Class="px-16 py-12" @onkeydown=Enter>
                     @GetLoginCore()
                 </MCard>
