--- a/src/ThingsGateway.Gateway.Blazor/Page/Index.razor
+++ b/src/ThingsGateway.Gateway.Blazor/Page/Index.razor
@@ -9,9 +9,8 @@
 @inject UserResoures UserResoures;
 
 
-
 <MRow>
-    <MCol Md=3 Sm=12>
+    <MCol Md=3 Cols=12>
         <MCard Height=140 Elevation=1 Rounded=true Class="ma-2">
             <MCardText>
                 <MRow Class="max-height" NoGutters>
@@ -27,7 +26,7 @@
         </MCard>
     </MCol>
 
-    <MCol Md=3 Sm=12>
+    <MCol Md=3 Cols=12>
         <MCard Height=140 Elevation=1 Rounded=true Class="ma-2">
             <MCardText>
                 <MRow Class="max-height" NoGutters>
@@ -43,7 +42,7 @@
         </MCard>
     </MCol>
 
-    <MCol Md=3 Sm=12>
+    <MCol Md=3 Cols=12>
         <MCard Height=140 Elevation=1 Rounded=true Class="ma-2">
             <MCardText>
                 <MRow Class="max-height" NoGutters>
@@ -60,7 +59,7 @@
     </MCol>
 
 
-    <MCol Md=3 Sm=12>
+    <MCol Md=3 Cols=12>
         <MCard Height=140 Elevation=1 Rounded=true Class="ma-2">
             <MCardText>
                 <MRow Class="max-height" NoGutters>
@@ -74,7 +73,6 @@
     </MCol>
 
 </MRow>
-
 <MCard MinHeight=120 Rounded=true Elevation=1 Class="ma-2 mt-4">
     <MCardSubtitle Class="text-subtitle-1">
         @AppService.I18n.T("快捷方式")
