--- a/src/ThingsGateway.Gateway.Blazor/Page/Channel/ChannelPage.razor
+++ b/src/ThingsGateway.Gateway.Blazor/Page/Channel/ChannelPage.razor
@@ -111,15 +111,15 @@
         <MContainer>
             <MRow Justify="JustifyTypes.Start" Align="AlignTypes.Center">
 
-                <MCol Md=12 Sm=12>
+                <MCol Md=12 Cols=12>
                     <MSubheader Style="max-height:24px" Class="font-weight-black text-subtitle-1">
                         @AppService.I18n.T("基础属性")
                     </MSubheader>
                 </MCol>
-                <MCol Md=3 Sm=12>
+                <MCol Md=3 Cols=12>
                     <MTextField Dense Style="max-width:300px" Outlined HideDetails="@("auto")" Color="primary" @bind-Value=@context.Name Label="@(context.Description(x => x.Name))" />
                 </MCol>
-                <MCol Md=3 Sm=12>
+                <MCol Md=3 Cols=12>
                     <MSelect Items=@(typeof(ChannelTypeEnum).GetEnumList()) Style="max-width:300px;"
                              @bind-Value=@context.ChannelType Label=@(context.Description(x => x.ChannelType))
                              MenuProps="@(props => { props.Auto = true; props.OffsetY = true; })"
@@ -128,7 +128,7 @@
                              Dense HideDetails=@("auto")
                              Outlined></MSelect>
                 </MCol>
-                <MCol Md=3 Sm=12>
+                <MCol Md=3 Cols=12>
                     <MRadioGroup @bind-Value=@context.Enable Label=@(context.Description(x => x.Enable))
                                  Style="max-width:300px"
                                  Row Dense HideDetails="@("auto")">
@@ -136,7 +136,7 @@
                         <MRadio Label=@AppService.I18n.T("否") Value=false></MRadio>
                     </MRadioGroup>
                 </MCol>
-                <MCol Md=3 Sm=12>
+                <MCol Md=3 Cols=12>
                     <MRadioGroup @bind-Value=@context.LogEnable Label=@(context.Description(x => x.LogEnable))
                                  Style="max-width:300px"
                                  Row Dense HideDetails="@("auto")">
@@ -155,39 +155,39 @@
 
             }
             <MRow Class="mt-5" Justify="JustifyTypes.Start" Align="AlignTypes.Center">
-                <MCol Md=12 Sm=12>
+                <MCol Md=12 Cols=12>
                     <MSubheader Style="max-height:24px" Class="font-weight-black text-subtitle-1">
                         @AppService.I18n.T("通道属性")
                     </MSubheader>
                 </MCol>
 
 
-                <MCol Md=3 Sm=12>
+                <MCol Md=3 Cols=12>
                     <MTextField Style="max-width:300px" Disabled=@(!isTcpClient&&!isUdp) Dense Outlined HideDetails="@("auto")"
                                 Label=@AppService.I18n.T("RemoteUrl") @bind-Value=@context.RemoteUrl />
                 </MCol>
-                <MCol Md=3 Sm=12>
+                <MCol Md=3 Cols=12>
                     <MTextField Style="max-width:300px" Disabled=@(!isTcpClient&&!isTcpService&&!isUdp) Dense Outlined HideDetails="@("auto")"
                                 Label=@AppService.I18n.T("BindUrl") @bind-Value=@context.BindUrl />
                 </MCol>
             </MRow>
             <MRow Class="mt-5" Justify="JustifyTypes.Start" Align="AlignTypes.Center">
 
-                <MCol Md=3 Sm=12>
+                <MCol Md=3 Cols=12>
                     <MTextField Style="max-width:300px" Disabled=!isSerial Dense Outlined HideDetails="@("auto")"
                                 Label=@AppService.I18n.T("PortName") @bind-Value=@context.PortName />
                 </MCol>
-                <MCol Md=3 Sm=12>
+                <MCol Md=3 Cols=12>
                     <MTextField Type="number" Style="max-width:300px" Disabled=!isSerial Dense Outlined HideDetails="@("auto")"
                                 Label=@AppService.I18n.T("BaudRate") @bind-Value=@context.BaudRate />
                 </MCol>
 
-                <MCol Md=3 Sm=12>
+                <MCol Md=3 Cols=12>
                     <MTextField Style="max-width:300px" Disabled=!isSerial Dense Outlined HideDetails="@("auto")"
                                 Type="number" Label=@AppService.I18n.T("DataBits") @bind-Value=@context.DataBits />
                 </MCol>
 
-                <MCol Md=3 Sm=12>
+                <MCol Md=3 Cols=12>
                     <MSelect Style="max-width:300px" Disabled=!isSerial Dense Outlined HideDetails="@("auto")"
                              Label=@AppService.I18n.T("Parity") @bind-Value=@context.Parity
                              Items=@(typeof(Parity).GetEnumList())
@@ -197,7 +197,7 @@
                     </MSelect>
                 </MCol>
 
-                <MCol Md=3 Sm=12>
+                <MCol Md=3 Cols=12>
                     <MSelect Style="max-width:300px" Disabled=!isSerial Dense Outlined HideDetails="@("auto")"
                              Label=@AppService.I18n.T("StopBits") @bind-Value=@context.StopBits
                              Items=@(typeof(StopBits).GetEnumList())
@@ -207,7 +207,7 @@
                     </MSelect>
                 </MCol>
 
-                <MCol Md=3 Sm=12>
+                <MCol Md=3 Cols=12>
                     <MSelect Class="" Items=@(new List<bool>(){true,false})
                              Label=@AppService.I18n.T("DtrEnable") @bind-Value=@context.DtrEnable
                              Clearable Style="max-width:300px" Disabled=!isSerial
@@ -218,7 +218,7 @@
                              Outlined></MSelect>
 
                 </MCol>
-                <MCol Md=3 Sm=12>
+                <MCol Md=3 Cols=12>
                     <MSelect Class="" Items=@(new List<bool>(){true,false})
                              Label=@AppService.I18n.T("RtsEnable") @bind-Value=@context.RtsEnable
                              Clearable Style="max-width:300px" Disabled=!isSerial
