自动刷新图标时，启用echarts组件合并模式

--- a/src/ThingsGateway.Gateway.Blazor/Page/Index.razor
+++ b/src/ThingsGateway.Gateway.Blazor/Page/Index.razor
@@ -98,7 +98,7 @@
     <MDivider></MDivider>
     <MRow Class="pa-4" NoGutters Align="AlignTypes.Center" Justify="JustifyTypes.Start">
 
-         <MECharts Option="eChartsOption" Width="@("100%")" MinHeight="400"></MECharts>
+         <MECharts @ref=hardwareInfoECharts Option=hardwareInfoEChartsOption Width="@("100%")" MinHeight="400"></MECharts>
 
      </MRow>
  </MCard>
